objects/DSR_UseCase_BluePrint_Definition__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdditionalURL__c</fullName>
        <label>Additional URL</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dateoflastrevision__c</fullName>
        <label>Date of last revision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LatestVersion__c</fullName>
        <label>Latest Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Use_Cases__c</fullName>
        <description>A comma separated list of Short Codes for each use case that the current use case or blueprint is related to. This is used primarily to associate Sales &amp; Marketing use cases with the base use cases, though it potentially could also be used to map a blueprint to the use cases it support.</description>
        <label>Matched Use Cases</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maturity_Model__c</fullName>
        <description>Defines the maturity model that the use case or blueprint enables</description>
        <inlineHelpText>Reference https://genesys.gosavo.com/Document/Document.aspx?id=41325498&amp;view=&amp;srlid=60469133&amp;srisprm=False&amp;sritidx=1&amp;srpgidx=0&amp;srpgsz=25</inlineHelpText>
        <label>Maturity Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Random</fullName>
                </value>
                <value>
                    <fullName>Consistent</fullName>
                </value>
                <value>
                    <fullName>Defined</fullName>
                </value>
                <value>
                    <fullName>Differentiated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Platform_Type__c</fullName>
        <label>Offer/Platform Type Support</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PureConnect On Premise</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud</fullName>
                </value>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
                <value>
                    <fullName>PureEngage On Premise</fullName>
                </value>
                <value>
                    <fullName>PureEngage Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>Product Category of the use case or blueprint based on the new Genesys Taxonomy 2018 - reference</description>
        <inlineHelpText>Reference: https://genesys.gosavo.com/Document/Document.aspx?id=46591318&amp;view=</inlineHelpText>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Open Platform</fullName>
                </value>
                <value>
                    <fullName>Self Service &amp; Automation</fullName>
                </value>
                <value>
                    <fullName>Workforce Engagement Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PublishedURL__c</fullName>
        <label>Published URL</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ShortCode__c</fullName>
        <label>Short Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Category__c</fullName>
        <description>What it does: indicates the Solutions Category (Taxonomy) for Use Case / Blueprint definitions
Downstream impact: n/a
Which department is owner: Solutions Marketing / Cloud Services / Professional Services</description>
        <inlineHelpText>Defines the Solution Category (Taxonomy) for the Use Case /Blueprint definition</inlineHelpText>
        <label>Solution Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Engagement</fullName>
                </value>
                <value>
                    <fullName>Employee Engagement</fullName>
                </value>
                <value>
                    <fullName>Business Optimization</fullName>
                </value>
                <value>
                    <fullName>Sales and Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <description>What it does: indicates the Solution type for Use Case / Blueprint definitions
Downstream impact: n/a
Which department is owner: Solutions Marketing / Cloud Services / Professional Services</description>
        <label>Solution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Self-Service</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Omnichannel Desktop</fullName>
                </value>
                <value>
                    <fullName>Workforce Optimization</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Platform and Workload Management</fullName>
                </value>
                <value>
                    <fullName>Sales: All Solutions</fullName>
                </value>
                <value>
                    <fullName>Marketing: All Solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use Case</fullName>
                </value>
                <value>
                    <fullName>Blueprint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DSR UseCase&amp;BluePrint Definition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>ShortCode__c</columns>
        <columns>Name__c</columns>
        <columns>Description__c</columns>
        <columns>PublishedURL__c</columns>
        <columns>Type__c</columns>
        <columns>Dateoflastrevision__c</columns>
        <columns>LatestVersion__c</columns>
        <columns>Offer_Platform_Type__c</columns>
        <columns>Notes__c</columns>
        <columns>Active__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BluePrint</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>ShortCode__c</columns>
        <columns>Name__c</columns>
        <columns>Description__c</columns>
        <columns>PublishedURL__c</columns>
        <columns>Offer_Platform_Type__c</columns>
        <columns>Active__c</columns>
        <columns>LatestVersion__c</columns>
        <columns>Dateoflastrevision__c</columns>
        <columns>Notes__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Blueprint</value>
        </filters>
        <label>BluePrint</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Use_Case</fullName>
        <columns>NAME</columns>
        <columns>ShortCode__c</columns>
        <columns>Name__c</columns>
        <columns>Description__c</columns>
        <columns>PublishedURL__c</columns>
        <columns>Offer_Platform_Type__c</columns>
        <columns>Active__c</columns>
        <columns>LatestVersion__c</columns>
        <columns>Dateoflastrevision__c</columns>
        <columns>Notes__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Use Case</value>
        </filters>
        <label>Use Case</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>DSR UseCase&amp;BluePrint Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DSR UseCase&amp;BluePrint Definition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>